# AI_Translator_Plugin_1

./: .gitignore  CMakeLists.txt
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ResamplingFIFO.h  TranslationController.cpp  TranslationController.h  TranslationEngine - Copy.cpp  TranslationEngine - Copy.h  TranslationEngine.cpp  TranslationEngine.h  TranslationWorker.cpp  TranslationWorker.h  WavEncoder.h  WavEncoderJob.h  WhisperEngine.cpp  WhisperEngine.h  WhisperThread.h  marian_c_api.cpp  marian_c_api.h
Source/libs/: lib.txt
